fix th text-align on tables in options

--- a/web/skins/classic/css/base/views/options.css
+++ b/web/skins/classic/css/base/views/options.css
@@ -21,6 +21,9 @@ input.large {
 #contentTable.userTable .colMonitor, #contentTable.userTable .colUsername {
     text-align: left;
 }
+#contentTable th {
+  text-align: left;
+}
 
 input[name="newConfig[ZM_OPT_GOOG_RECAPTCHA_SITEKEY]"],
 input[name="newConfig[ZM_OPT_GOOG_RECAPTCHA_SECRETKEY]"] {
